Add xScale and yScale to floorplan data to allow for triangulation
